@@ -2,6 +2,7 @@ Revision history for PostScript-Report
 
 0.03   NOT
 	- Added background attribute to Container
+	- Added detail_background attribute to Report
 	- Add PageOrder: Ascend comment
 	- Warn in documentation against making padding_bottom too small
 
